src/fapi-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /catalog(/|$)(.*)
        backend:
          serviceName: catalog-api-service
          servicePort: 80
      - path: /basket(/|$)(.*)
        backend:
          serviceName: basket-api-service
          servicePort: 80
      - path: /authentification(/|$)(.*)
        backend:
          serviceName: authentification-api-service
          servicePort: 80
